Created page with "Místo [[Sketcher_ConstrainHorizontal|horizontální]] a [[Sketcher_ConstrainVertical|vertikální]] vazby lze použít také [[Sketcher_ConstrainAngle|úhlové rozměry]]. Úhel mezi hranami vázaný rozměry úhlů se nezmění. 180° se nestane 0°, 90° se nestane 270° atd. Na obrázku byly nahrazeny všechny vodorovné a svislé vazby, ale již nahrazení dvou z nich je v tomto případě účinné."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -379,11 +379,8 @@
 </p>
 <h4><span id="Pou.C5.BEijte_.C3.BAhlov.C3.A9_rozm.C4.9Bry"></span><span class="mw-headline" id="Pou&#382;ijte_&uacute;hlov&eacute;_rozm&#283;ry">Pou&#382;ijte &uacute;hlov&eacute; rozm&#283;ry</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
+</p><p>M&iacute;sto <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute;</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute;</a> vazby lze pou&#382;&iacute;t tak&eacute; <a href="../Sketcher_ConstrainAngle.html" title="Sketcher ConstrainAngle">&uacute;hlov&eacute; rozm&#283;ry</a>. &Uacute;hel mezi hranami v&aacute;zan&yacute; rozm&#283;ry &uacute;hl&#367; se nezm&#283;n&iacute;. 180&deg; se nestane 0&deg;, 90&deg; se nestane 270&deg; atd. Na obr&aacute;zku byly nahrazeny v&scaron;echny vodorovn&eacute; a svisl&eacute; vazby, ale ji&#382; nahrazen&iacute; dvou z nich je v tomto p&#345;&iacute;pad&#283; &uacute;&#269;inn&eacute;.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Using <a href="../Sketcher_ConstrainAngle.html" title="Sketcher ConstrainAngle">angle dimensions</a> instead of <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizontal</a> and <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertical</a> constraints can also work. The angle between edges constrained by angle dimensions will not change. 180&deg; will not become 0&deg;, 90&deg; will not become 270&deg;, etc. In the image all horizontal and vertical constraints have been replaced, but just replacing two is already effective here.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Tutorials">Tutorials</span></h2>
 </div>
@@ -453,13 +450,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118154822
+Cached time: 20260118155137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.496 seconds
-Real time usage: 0.752 seconds
-Preprocessor visited node count: 1391/1000000
+CPU time usage: 0.397 seconds
+Real time usage: 0.616 seconds
+Preprocessor visited node count: 1390/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
@@ -469,19 +466,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.969      1 -total
- 24.26%    7.028      1 Template:Sketcher_Tools_navi/cs
- 18.63%    5.398      2 Template:Navigation_menu_2
- 14.69%    4.256      1 Template:Userdocnavi/cs
-  8.85%    2.564      1 Template:PropertyView
-  8.36%    2.423      2 Template:Docnav
-  7.13%    2.066     34 Template:Version
-  5.26%    1.525      6 Template:Caption
-  4.72%    1.367     14 Template:KEY
-  4.64%    1.344      1 Template:Variable
+100.00%   39.773      1 -total
+ 20.84%    8.289      1 Template:Sketcher_Tools_navi/cs
+ 11.99%    4.768      1 Template:PropertyView
+ 11.77%    4.680      2 Template:Navigation_menu_2
+ 11.27%    4.482      1 Template:Userdocnavi/cs
+ 11.25%    4.476      2 Template:Docnav
+  7.45%    2.962     34 Template:Version
+  5.86%    2.330      6 Template:Caption
+  5.51%    2.190      1 Template:Variable
+  5.38%    2.141     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118154822 and revision id 1740725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155137 and revision id 1740727. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
