--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -380,10 +380,9 @@
 <h4><span id="Pou.C5.BEijte_.C3.BAhlov.C3.A9_rozm.C4.9Bry"></span><span class="mw-headline" id="Pou&#382;ijte_&uacute;hlov&eacute;_rozm&#283;ry">Pou&#382;ijte &uacute;hlov&eacute; rozm&#283;ry</span></h4>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
 </p><p>M&iacute;sto <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute;</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute;</a> vazby lze pou&#382;&iacute;t tak&eacute; <a href="../Sketcher_ConstrainAngle.html" title="Sketcher ConstrainAngle">&uacute;hlov&eacute; rozm&#283;ry</a>. &Uacute;hel mezi hranami v&aacute;zan&yacute; rozm&#283;ry &uacute;hl&#367; se nezm&#283;n&iacute;. 180&deg; se nestane 0&deg;, 90&deg; se nestane 270&deg; atd. Na obr&aacute;zku byly nahrazeny v&scaron;echny vodorovn&eacute; a svisl&eacute; vazby, ale ji&#382; nahrazen&iacute; dvou z nich je v tomto p&#345;&iacute;pad&#283; &uacute;&#269;inn&eacute;.
+</p><p><span id="Tutorials"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Tutorials">Tutorials</span></h2>
-</div>
+<h2><span id="N.C3.A1vody"></span><span class="mw-headline" id="N&aacute;vody">N&aacute;vody</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=30104">Sketcher Lecture</a> by chrisb. This is a more than 80 page PDF document that serves as a detailed manual for the Sketcher. It explains the basics of Sketcher usage, and goes into a lot of detail about the creation of geometrical shapes, and each of the constraints.</li>
 <li><a href="../Basic_Sketcher_Tutorial.html" title="Basic Sketcher Tutorial">Basic Sketcher Tutorial</a> for beginners</li>
@@ -450,12 +449,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118155137
+Cached time: 20260118155253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.397 seconds
-Real time usage: 0.616 seconds
+CPU time usage: 0.521 seconds
+Real time usage: 2.026 seconds
 Preprocessor visited node count: 1390/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -466,19 +465,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.773      1 -total
- 20.84%    8.289      1 Template:Sketcher_Tools_navi/cs
- 11.99%    4.768      1 Template:PropertyView
- 11.77%    4.680      2 Template:Navigation_menu_2
- 11.27%    4.482      1 Template:Userdocnavi/cs
- 11.25%    4.476      2 Template:Docnav
-  7.45%    2.962     34 Template:Version
-  5.86%    2.330      6 Template:Caption
-  5.51%    2.190      1 Template:Variable
-  5.38%    2.141     14 Template:KEY
+100.00%  101.209      1 -total
+ 20.82%   21.071      1 Template:Sketcher_Tools_navi/cs
+ 15.28%   15.469      1 Template:Userdocnavi/cs
+ 13.27%   13.426      2 Template:Navigation_menu_2
+  9.67%    9.791      8 Template:VersionPlus
+  8.22%    8.324     34 Template:Version
+  7.58%    7.672      1 Template:PropertyView
+  5.96%    6.036      2 Template:Docnav
+  4.84%    4.900      6 Template:Caption
+  4.43%    4.487     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155137 and revision id 1740727. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155251 and revision id 1740729. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
