--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -383,12 +383,10 @@
 </p><p><span id="Tutorials"></span>
 </p>
 <h2><span id="N.C3.A1vody"></span><span class="mw-headline" id="N&aacute;vody">N&aacute;vody</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=30104">Sketcher Lecture</a> by chrisb. This is a more than 80 page PDF document that serves as a detailed manual for the Sketcher. It explains the basics of Sketcher usage, and goes into a lot of detail about the creation of geometrical shapes, and each of the constraints.</li>
-<li><a href="../Basic_Sketcher_Tutorial.html" title="Basic Sketcher Tutorial">Basic Sketcher Tutorial</a> for beginners</li>
-<li><a href="../Sketcher_Micro_Tutorial_-_Constraint_Practices.html" title="Sketcher Micro Tutorial - Constraint Practices">Sketcher Micro Tutorial - Constraint Practices</a></li>
-<li><a href="../Sketcher_requirement_for_a_sketch.html" title="Sketcher requirement for a sketch">Sketcher requirement for a sketch</a> Minimum requirement for a sketch and Complete determination of a sketch</li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=36&amp;t=30104">Lekce Sketcheru</a> od chrisb. Jedn&aacute; se o v&iacute;ce ne&#382; 80str&aacute;nkov&yacute; dokument ve form&aacute;tu PDF, kter&yacute; slou&#382;&iacute; jako podrobn&yacute; manu&aacute;l k programu Sketcher. Vysv&#283;tluje z&aacute;klady pou&#382;&iacute;v&aacute;n&iacute; programu Sketcher a podrobn&#283; popisuje vytv&aacute;&#345;en&iacute; geometrick&yacute;ch tvar&#367; a jednotliv&yacute;ch omezen&iacute;.</li>
+<li><a href="../Basic_Sketcher_Tutorial.html" title="Basic Sketcher Tutorial">Z&aacute;kladn&iacute; n&aacute;vod pro Sketcher</a> pro za&#269;&aacute;te&#269;n&iacute;ky</li>
+<li><a href="../Sketcher_Micro_Tutorial_-_Constraint_Practices.html" title="Sketcher Micro Tutorial - Constraint Practices">Sketcher Micro Tutorial &ndash; Praktick&eacute; pou&#382;it&iacute; vazeb</a></li>
+<li><a href="../Sketcher_requirement_for_a_sketch.html" title="Sketcher requirement for a sketch">Po&#382;adavky na n&aacute;&#269;rt</a> Minim&aacute;ln&iacute; po&#382;adavky na n&aacute;&#269;rt a kompletn&iacute; ur&#269;en&iacute; n&aacute;&#269;rtu</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
 </div>
@@ -449,13 +447,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118155253
+Cached time: 20260118155809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.521 seconds
-Real time usage: 2.026 seconds
-Preprocessor visited node count: 1390/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 0.731 seconds
+Preprocessor visited node count: 1389/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
@@ -465,19 +463,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.209      1 -total
- 20.82%   21.071      1 Template:Sketcher_Tools_navi/cs
- 15.28%   15.469      1 Template:Userdocnavi/cs
- 13.27%   13.426      2 Template:Navigation_menu_2
-  9.67%    9.791      8 Template:VersionPlus
-  8.22%    8.324     34 Template:Version
-  7.58%    7.672      1 Template:PropertyView
-  5.96%    6.036      2 Template:Docnav
-  4.84%    4.900      6 Template:Caption
-  4.43%    4.487     14 Template:KEY
+100.00%   48.351      1 -total
+ 26.82%   12.969      1 Template:Sketcher_Tools_navi/cs
+ 18.54%    8.966      2 Template:Navigation_menu_2
+ 14.95%    7.230      1 Template:Userdocnavi/cs
+ 11.02%    5.327     34 Template:Version
+  9.68%    4.678      1 Template:PropertyView
+  6.22%    3.008      1 Template:Variable
+  5.30%    2.565      1 Template:TOCright
+  4.76%    2.303      6 Template:Caption
+  4.17%    2.016      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155251 and revision id 1740729. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155808 and revision id 1740731. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
