Created page with "== Skriptování =="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -387,9 +387,9 @@
 <li><a href="../Basic_Sketcher_Tutorial.html" title="Basic Sketcher Tutorial">Z&aacute;kladn&iacute; n&aacute;vod pro Sketcher</a> pro za&#269;&aacute;te&#269;n&iacute;ky</li>
 <li><a href="../Sketcher_Micro_Tutorial_-_Constraint_Practices.html" title="Sketcher Micro Tutorial - Constraint Practices">Sketcher Micro Tutorial &ndash; Praktick&eacute; pou&#382;it&iacute; vazeb</a></li>
 <li><a href="../Sketcher_requirement_for_a_sketch.html" title="Sketcher requirement for a sketch">Po&#382;adavky na n&aacute;&#269;rt</a> Minim&aacute;ln&iacute; po&#382;adavky na n&aacute;&#269;rt a kompletn&iacute; ur&#269;en&iacute; n&aacute;&#269;rtu</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
-</div>
+<p><span id="Scripting"></span>
+</p>
+<h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The <a href="../Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> page contains examples on how to create constraints from Python scripts.
 </p>
@@ -447,12 +447,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118155809
+Cached time: 20260118155831
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.731 seconds
+CPU time usage: 0.465 seconds
+Real time usage: 0.689 seconds
 Preprocessor visited node count: 1389/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -463,19 +463,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.351      1 -total
- 26.82%   12.969      1 Template:Sketcher_Tools_navi/cs
- 18.54%    8.966      2 Template:Navigation_menu_2
- 14.95%    7.230      1 Template:Userdocnavi/cs
- 11.02%    5.327     34 Template:Version
-  9.68%    4.678      1 Template:PropertyView
-  6.22%    3.008      1 Template:Variable
-  5.30%    2.565      1 Template:TOCright
-  4.76%    2.303      6 Template:Caption
-  4.17%    2.016      2 Template:Docnav
+100.00%   35.074      1 -total
+ 19.58%    6.869      1 Template:Sketcher_Tools_navi/cs
+ 13.90%    4.877      2 Template:Navigation_menu_2
+ 13.01%    4.562      1 Template:Userdocnavi/cs
+  9.32%    3.269      1 Template:PropertyView
+  8.21%    2.880      2 Template:Docnav
+  8.00%    2.806     34 Template:Version
+  6.71%    2.354      6 Template:Caption
+  5.97%    2.095      5 Template:MenuCommand
+  5.31%    1.861      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155808 and revision id 1740731. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155830 and revision id 1740733. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
