Created page with "Stránka [[Sketcher_scripting|Sketcher scripting]] obsahuje příklady toho, jak vytvářet vazby pomocí skriptů v jazyce Python."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -390,10 +390,8 @@
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <a href="../Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> page contains examples on how to create constraints from Python scripts.
+<p>Str&aacute;nka <a href="../Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> obsahuje p&#345;&iacute;klady toho, jak vytv&aacute;&#345;et vazby pomoc&iacute; skript&#367; v jazyce Python.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Examples">Examples</span></h2>
 </div>
@@ -447,13 +445,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118155831
+Cached time: 20260118160000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.465 seconds
-Real time usage: 0.689 seconds
-Preprocessor visited node count: 1389/1000000
+CPU time usage: 0.458 seconds
+Real time usage: 0.672 seconds
+Preprocessor visited node count: 1388/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
@@ -463,19 +461,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.074      1 -total
- 19.58%    6.869      1 Template:Sketcher_Tools_navi/cs
- 13.90%    4.877      2 Template:Navigation_menu_2
- 13.01%    4.562      1 Template:Userdocnavi/cs
-  9.32%    3.269      1 Template:PropertyView
-  8.21%    2.880      2 Template:Docnav
-  8.00%    2.806     34 Template:Version
-  6.71%    2.354      6 Template:Caption
-  5.97%    2.095      5 Template:MenuCommand
-  5.31%    1.861      1 Template:TOCright
+100.00%   49.144      1 -total
+ 21.50%   10.564      1 Template:Sketcher_Tools_navi/cs
+ 11.84%    5.820      1 Template:Userdocnavi/cs
+ 11.42%    5.610      1 Template:PropertyView
+ 10.95%    5.381      2 Template:Docnav
+ 10.10%    4.961      2 Template:Navigation_menu_2
+  7.68%    3.772     34 Template:Version
+  7.08%    3.482      8 Template:VersionPlus
+  5.38%    2.645      5 Template:MenuCommand
+  4.60%    2.260      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155830 and revision id 1740733. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155959 and revision id 1740735. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
