Created page with "== Příklady =="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -391,10 +391,9 @@
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
 <p>Str&aacute;nka <a href="../Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> obsahuje p&#345;&iacute;klady toho, jak vytv&aacute;&#345;et vazby pomoc&iacute; skript&#367; v jazyce Python.
+</p><p><span id="Examples"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Examples">Examples</span></h2>
-</div>
+<h2><span id="P.C5.99.C3.ADklady"></span><span class="mw-headline" id="P&#345;&iacute;klady">P&#345;&iacute;klady</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>For some ideas of what can be achieved with Sketcher tools, have a look at: <a href="../Sketcher_Examples.html" title="Sketcher Examples">Sketcher Examples</a>.
 </p>
@@ -445,12 +444,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118160000
+Cached time: 20260118160016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.458 seconds
-Real time usage: 0.672 seconds
+CPU time usage: 0.580 seconds
+Real time usage: 0.957 seconds
 Preprocessor visited node count: 1388/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
@@ -461,19 +460,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.144      1 -total
- 21.50%   10.564      1 Template:Sketcher_Tools_navi/cs
- 11.84%    5.820      1 Template:Userdocnavi/cs
- 11.42%    5.610      1 Template:PropertyView
- 10.95%    5.381      2 Template:Docnav
- 10.10%    4.961      2 Template:Navigation_menu_2
-  7.68%    3.772     34 Template:Version
-  7.08%    3.482      8 Template:VersionPlus
-  5.38%    2.645      5 Template:MenuCommand
-  4.60%    2.260      1 Template:Variable
+100.00%   62.912      1 -total
+ 19.78%   12.447      1 Template:Sketcher_Tools_navi/cs
+ 15.02%    9.450      2 Template:Navigation_menu_2
+ 11.62%    7.308      1 Template:Userdocnavi/cs
+  8.91%    5.604      2 Template:Docnav
+  8.25%    5.193      1 Template:PropertyView
+  8.00%    5.033     34 Template:Version
+  7.02%    4.416      6 Template:Caption
+  6.63%    4.172      5 Template:MenuCommand
+  5.64%    3.546      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118155959 and revision id 1740735. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118160015 and revision id 1740737. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
