Created page with "Několik nápadů, co lze pomocí nástrojů Sketcheru vytvořit, najdete na stránce [[Sketcher_Examples|Příklady Sketcheru]]."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -15,7 +15,7 @@
 <li><a href="../sk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&yacute; st&ocirc;l N&aacute;&#269;rtn&iacute;k (8% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="../fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -394,11 +394,8 @@
 </p><p><span id="Examples"></span>
 </p>
 <h2><span id="P.C5.99.C3.ADklady"></span><span class="mw-headline" id="P&#345;&iacute;klady">P&#345;&iacute;klady</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>For some ideas of what can be achieved with Sketcher tools, have a look at: <a href="../Sketcher_Examples.html" title="Sketcher Examples">Sketcher Examples</a>.
-</p>
-</div>
-<p><span typeof="mw:File"><span><img src="../File/Sketcher_ExampleHinge-01.gif" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="400" data-file-height="300"></span></span>
+<p>N&#283;kolik n&aacute;pad&#367;, co lze pomoc&iacute; n&aacute;stroj&#367; Sketcheru vytvo&#345;it, najdete na str&aacute;nce <a href="../Sketcher_Examples.html" title="Sketcher Examples">P&#345;&iacute;klady Sketcheru</a>.
+</p><p><span typeof="mw:File"><span><img src="../File/Sketcher_ExampleHinge-01.gif" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="400" data-file-height="300"></span></span>
 <span typeof="mw:File"><span><img src="../File/Sketcher_ExampleHinge-15.png" decoding="async" width="90" height="60" class="mw-file-element" data-file-width="600" data-file-height="400"></span></span>
 </p><p><br>
 </p>
@@ -444,35 +441,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118160016
+Cached time: 20260118160052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.580 seconds
-Real time usage: 0.957 seconds
-Preprocessor visited node count: 1388/1000000
+CPU time usage: 0.405 seconds
+Real time usage: 0.461 seconds
+Preprocessor visited node count: 1387/1000000
 Post&#8208;expand include size: 34965/2097152 bytes
 Template argument size: 9784/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4773/5000000 bytes
+Unstrip post&#8208;expand size: 4777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.912      1 -total
- 19.78%   12.447      1 Template:Sketcher_Tools_navi/cs
- 15.02%    9.450      2 Template:Navigation_menu_2
- 11.62%    7.308      1 Template:Userdocnavi/cs
-  8.91%    5.604      2 Template:Docnav
-  8.25%    5.193      1 Template:PropertyView
-  8.00%    5.033     34 Template:Version
-  7.02%    4.416      6 Template:Caption
-  6.63%    4.172      5 Template:MenuCommand
-  5.64%    3.546      1 Template:TOCright
+100.00%   37.090      1 -total
+ 25.87%    9.595      1 Template:Sketcher_Tools_navi/cs
+ 16.15%    5.989      2 Template:Navigation_menu_2
+ 12.62%    4.681      1 Template:Userdocnavi/cs
+  8.32%    3.087      1 Template:PropertyView
+  8.23%    3.053      2 Template:Docnav
+  7.27%    2.698     34 Template:Version
+  6.37%    2.361      6 Template:Caption
+  5.29%    1.963      8 Template:VersionPlus
+  4.77%    1.770      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118160015 and revision id 1740737. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118160051 and revision id 1740739. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
