Marked this version for translation

--- a/wiki/TechDraw_CosmeticCircle.html
+++ b/wiki/TechDraw_CosmeticCircle.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticCircle</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hilfskreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Hilfskreis (84% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Cercle cosm&eacute;tique par 1 point (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cercle cosm&eacute;tique par 1 point (84% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (84% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ru/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw CosmeticCircle
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1050;&#1086;&#1089;&#1084;&#1077;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1050;&#1088;&#1091;&#1075;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="ko/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#50896; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -142,35 +142,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113231
+Cached time: 20260118192905
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.652 seconds
 Preprocessor visited node count: 410/1000000
 Post&#8208;expand include size: 26057/2097152 bytes
 Template argument size: 9981/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1674/5000000 bytes
+Unstrip post&#8208;expand size: 1659/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.255      1 -total
- 30.03%    8.184      1 Template:TechDraw_Tools_navi
- 26.15%    7.126      2 Template:Navigation_menu_2
- 14.73%    4.014      1 Template:Userdocnavi
- 11.34%    3.091      2 Template:Docnav
- 10.39%    2.833      1 Template:GuiCommand
-  6.27%    1.709      1 Template:Caption
-  6.15%    1.677      4 Template:Button
-  6.13%    1.670      1 Template:Incode
-  5.34%    1.455      2 Template:MenuCommand
+100.00%  162.537      1 -total
+ 26.63%   43.285      1 Template:TechDraw_Tools_navi
+ 20.36%   33.094      2 Template:Navigation_menu_2
+ 17.73%   28.825      2 Template:Docnav
+ 16.20%   26.339      1 Template:Userdocnavi
+  9.73%   15.823      1 Template:GuiCommand
+  9.46%   15.382      1 Template:Caption
+  9.43%   15.326      4 Template:Button
+  5.29%    8.601      2 Template:MenuCommand
+  2.54%    4.128      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322266-0!canonical and timestamp 20260118113305 and revision id 1740288. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322266-0!canonical and timestamp 20260118192905 and revision id 1740288. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
