--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118102048
+Cached time: 20260118192936
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.340 seconds
-Real time usage: 0.370 seconds
+CPU time usage: 0.422 seconds
+Real time usage: 2.709 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  179.098      1 -total
-  2.42%    4.338      1 Template:Draft_Tools_navi
-  2.28%    4.075      2 Template:Navigation_menu_2
-  1.85%    3.311     10 Template:Code
-  1.27%    2.276      1 Template:Userdocnavi
-  1.26%    2.249     10 Template:CheckBox
-  1.16%    2.083      6 Template:SpinBox
-  1.14%    2.037      7 Template:RadioButton
-  1.12%    2.009      1 Template:Macro
-  1.05%    1.888      1 Template:Caption
+100.00% 1296.971      1 -total
+  3.39%   43.956     10 Template:Code
+  2.55%   33.112      1 Template:Draft_Tools_navi
+  1.73%   22.462      3 Template:ColoredText
+  1.65%   21.366     10 Template:CheckBox
+  1.57%   20.309      1 Template:Userdocnavi
+  1.41%   18.304      2 Template:Navigation_menu_2
+  1.32%   17.134      1 Template:Macro
+  1.18%   15.337     18 Template:FALSE
+  1.09%   14.113      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260118102054 and revision id 1740159. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260118192936 and revision id 1740159. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
