Marked this version for translation

--- a/wiki/Macro_FCInfo.html
+++ b/wiki/Macro_FCInfo.html
@@ -1,13 +1,13 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (54% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCInfo (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (50% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCInfo (6% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="sv/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (9% translated)" lang="sv" dir="ltr">svenska</a></li>
+<li><a href="sv/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (8% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="cs/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Makro FCInfo (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="ru/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
-<li><a href="ko/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="FCInfo &#47588;&#53356;&#47196; (81% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ko/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="FCInfo &#47588;&#53356;&#47196; (67% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -659,35 +659,35 @@ Here another post of <a rel="nofollow" class="external text" href="https://forum
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118062808
+Cached time: 20260118193250
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.197 seconds
-Real time usage: 0.242 seconds
+CPU time usage: 0.212 seconds
+Real time usage: 0.396 seconds
 Preprocessor visited node count: 1630/1000000
 Post&#8208;expand include size: 40661/2097152 bytes
 Template argument size: 5116/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 15704/5000000 bytes
+Unstrip post&#8208;expand size: 15698/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.690      1 -total
- 10.70%    5.960     19 Template:True
-  7.80%    4.344      1 Template:CodeDownload
-  6.61%    3.679     44 Template:LineEdit
-  6.58%    3.667     10 Template:Code
-  5.60%    3.118      8 Template:RadioButton
-  4.93%    2.744     10 Template:CheckBox
-  4.76%    2.652      1 Template:Macro
-  4.25%    2.366      1 Template:Codeextralink
-  3.57%    1.990      5 Template:SpinBox
+100.00%   55.875      1 -total
+  5.83%    3.260     10 Template:Code
+  4.76%    2.661      1 Template:Macro
+  4.62%    2.580     44 Template:LineEdit
+  4.39%    2.452      8 Template:RadioButton
+  3.66%    2.046     10 Template:CheckBox
+  3.55%    1.982      1 Template:Codeextralink
+  3.39%    1.895      5 Template:Clear
+  3.37%    1.881     25 Template:Button
+  3.30%    1.846     19 Template:True
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260118062830 and revision id 1739802. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260118193250 and revision id 1739802. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
