--- a/wiki/Cables_CableBox.html
+++ b/wiki/Cables_CableBox.html
@@ -107,7 +107,7 @@
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Box Body Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> the box shape is hidden to make it easier to edit wires inside a box (with possible help of helper rings). It should be set to <code>false</code> when wires editing is finished or not needed.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>PropertyBool</code>)</span>: If it is <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Depth</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the inner depth of the box. The default depth is 74 mm. Available if <b>Profile Type</b> property = <code>Rectangle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the inner diameter of the box. The default diameter is 60 mm. Available if <b>Profile Type</b> property = <code>Circle</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Din Rails</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If set to <code>true</code> the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/DIN_rail">DIN TH35 rail</a> is added automatically to box body depending on box shape and dimensions. The rail is placed 50 mmm below the top of the box, the distance between rails is set to 125 mm. The cable box has to be big enough to allow auto creation of DIN rails. The default value is <code>true</code>. Created only if <b>Profile Type</b> property = <code>Rectangle</code>.</li>
@@ -158,15 +158,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260117171150
+Cached time: 20260118193412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.176 seconds
+CPU time usage: 0.134 seconds
+Real time usage: 0.264 seconds
 Preprocessor visited node count: 2228/1000000
-Post&#8208;expand include size: 21467/2097152 bytes
-Template argument size: 4669/2097152 bytes
+Post&#8208;expand include size: 21435/2097152 bytes
+Template argument size: 4637/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 1376/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.037      1 -total
- 30.63%   14.103     27 Template:PropertyData
- 24.45%   11.254     27 Template:Variable
- 15.26%    7.024     24 Template:Value
-  9.84%    4.532      3 Template:TitleProperty
-  9.41%    4.334      1 Template:GuiCommand
-  7.25%    3.339      1 Template:TRUE
-  6.46%    2.975      2 Template:Docnav
-  6.43%    2.961     47 Template:Incode
-  4.18%    1.926      6 Template:KEY
+100.00%   67.778      1 -total
+ 31.25%   21.180     27 Template:PropertyData
+ 22.00%   14.910     27 Template:Variable
+ 13.54%    9.175     24 Template:Value
+ 11.57%    7.843      3 Template:TitleProperty
+  8.05%    5.459     47 Template:Incode
+  6.68%    4.529      1 Template:GuiCommand
+  5.51%    3.733      2 Template:Docnav
+  5.19%    3.521      3 Template:MenuCommand
+  5.00%    3.390      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260117171148 and revision id 1739619. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:372376-0!canonical and timestamp 20260118193423 and revision id 1740787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
