--- a/wiki/Cables_CableConnector.html
+++ b/wiki/Cables_CableConnector.html
@@ -168,7 +168,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>: An external shape of any <a href="Part_Workbench.html" title="Part Workbench">Shape</a>-based base object can be used here. This will replace the default method of shape creaction and an external shape will be used. <b>Number Of Terminals</b> and <b>Number Of Supp Lines</b> parameters become visible and can be changed if Base property is not None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Connector</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>PropertyBool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the height of the connector. The default height is 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Hole Size</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Specifies the size of holes in mm<sup>2</sup>. The default hole size is 2 mm<sup>2</sup>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number of Holes</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: Specifies the number of holes. The default value is 3.</li>
@@ -203,15 +203,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260117175022
+Cached time: 20260118193609
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.138 seconds
+CPU time usage: 0.172 seconds
+Real time usage: 0.479 seconds
 Preprocessor visited node count: 1276/1000000
-Post&#8208;expand include size: 16596/2097152 bytes
-Template argument size: 4591/2097152 bytes
+Post&#8208;expand include size: 16564/2097152 bytes
+Template argument size: 4559/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
@@ -219,19 +219,19 @@ Unstrip post&#8208;expand size: 2304/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.532      1 -total
- 23.53%    6.243     10 Template:PropertyData
- 17.50%    4.643     10 Template:Variable
- 11.18%    2.966      1 Template:GuiCommand
- 10.03%    2.660      6 Template:Code
-  9.10%    2.415      2 Template:TitleProperty
-  6.38%    1.694     20 Template:Incode
-  6.18%    1.639      2 Template:Docnav
-  5.73%    1.520      5 Template:Value
-  4.48%    1.189      3 Template:Caption
+100.00%  183.733      1 -total
+ 19.89%   36.539      6 Template:Code
+ 18.68%   34.321      1 Template:GuiCommand
+ 13.46%   24.731     10 Template:PropertyData
+  8.22%   15.111      1 Template:TRUE
+  7.79%   14.321     10 Template:Variable
+  7.62%   13.994     12 Template:FileName
+  7.05%   12.960      2 Template:Docnav
+  6.51%   11.954      6 Template:KEY
+  4.73%    8.694     20 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373295-0!canonical and timestamp 20260117175028 and revision id 1739620. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373295-0!canonical and timestamp 20260118193613 and revision id 1740788. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
