--- a/wiki/Cables_ElectricalDevice.html
+++ b/wiki/Cables_ElectricalDevice.html
@@ -152,7 +152,7 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>: An external shape of any <a href="Part_Workbench.html" title="Part Workbench">Shape</a>-based base object can be used here. This will replace the default method of shape creaction and an external shape will be used. <b>Number Of Terminals</b> and <b>Number Of Supp Lines</b> parameters become visible and can be changed if Base property is not None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>PropertyBool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> child objects. The default value is 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminal</a> child objects. The default value is 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Specifies the predefined set of parameters for Electrical Device. The default preset is <code>MCB_1-Pole</code>.</li></ul>
@@ -173,15 +173,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260117175847
+Cached time: 20260118194031
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.101 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.178 seconds
 Preprocessor visited node count: 931/1000000
-Post&#8208;expand include size: 11674/2097152 bytes
-Template argument size: 3748/2097152 bytes
+Post&#8208;expand include size: 11642/2097152 bytes
+Template argument size: 3716/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 2145/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.434      1 -total
- 18.80%    4.593      6 Template:PropertyData
- 15.36%    3.754      1 Template:GuiCommand
- 12.86%    3.142      6 Template:Variable
-  9.96%    2.433      6 Template:Code
-  9.38%    2.291      2 Template:TitleProperty
-  7.41%    1.811      2 Template:Docnav
-  6.07%    1.484      1 Template:TRUE
-  5.17%    1.264     13 Template:Incode
-  4.80%    1.172      4 Template:KEY
+100.00%   79.575      1 -total
+ 40.33%   32.089      2 Template:TitleProperty
+ 12.83%   10.208      1 Template:TRUE
+  7.78%    6.190      6 Template:Code
+  6.93%    5.512      2 Template:Value
+  6.63%    5.276      6 Template:PropertyData
+  5.29%    4.210      1 Template:GuiCommand
+  4.86%    3.864      6 Template:Variable
+  2.94%    2.341     13 Template:Incode
+  2.49%    1.985      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20260117175858 and revision id 1739622. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20260118194032 and revision id 1740790. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
