--- a/wiki/Cables_CableConduit.html
+++ b/wiki/Cables_CableConduit.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConduit</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+CableConduit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Leitungsf&uuml;hrung (85% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Leitungsf&uuml;hrung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Gaine (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
@@ -101,35 +101,35 @@ or <a href="Cables_CompoundPath.html" title="Cables CompoundPath">Cables Compoun
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251024160033
+Cached time: 20260118194509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.127 seconds
-Preprocessor visited node count: 695/1000000
-Post&#8208;expand include size: 10557/2097152 bytes
-Template argument size: 2811/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 668/1000000
+Post&#8208;expand include size: 10489/2097152 bytes
+Template argument size: 2779/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 853/5000000 bytes
+Unstrip post&#8208;expand size: 858/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.859      1 -total
- 30.72%    5.794      7 Template:PropertyData
- 23.74%    4.477      7 Template:Variable
- 16.19%    3.054      1 Template:GuiCommand
- 11.93%    2.249      4 Template:TitleProperty
-  9.93%    1.872      2 Template:Docnav
-  8.49%    1.601      5 Template:Value
-  6.76%    1.275     12 Template:Incode
-  5.67%    1.070      2 Template:Caption
-  5.58%    1.053      2 Template:KEY
+100.00%   64.039      1 -total
+ 29.16%   18.675      4 Template:TitleProperty
+ 15.56%    9.967      7 Template:PropertyData
+ 14.97%    9.586      1 Template:GuiCommand
+ 13.53%    8.662      7 Template:Variable
+  9.63%    6.169      2 Template:Caption
+  6.58%    4.215      1 Template:Value
+  6.38%    4.084      8 Template:Incode
+  6.27%    4.014      4 Template:TRUE
+  6.02%    3.857      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20251024160033 and revision id 1673709. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:382576-0!canonical and timestamp 20260118194507 and revision id 1740793. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
