Marked this version for translation

--- a/wiki/Cables_CableLightPoint.html
+++ b/wiki/Cables_CableLightPoint.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableLightPoint</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+CableLightPoint&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Lichtauslass (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Lichtauslass (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Source lumineuse (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Source lumineuse (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="pl/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Punkt o&#347;wietlenia (5% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_CableConnector.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a></div>
@@ -94,35 +94,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194709
+Cached time: 20260118195033
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.175 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.105 seconds
 Preprocessor visited node count: 550/1000000
 Post&#8208;expand include size: 9536/2097152 bytes
 Template argument size: 3024/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1044/5000000 bytes
+Unstrip post&#8208;expand size: 1034/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.442      1 -total
- 32.84%   19.519      5 Template:PropertyData
- 23.69%   14.081      5 Template:Variable
- 16.74%    9.948      1 Template:GuiCommand
- 15.45%    9.184      1 Template:TitleProperty
-  9.53%    5.664      6 Template:Incode
-  8.98%    5.336      1 Template:Value
-  6.74%    4.005      2 Template:MenuCommand
-  5.18%    3.080      2 Template:Docnav
-  4.58%    2.723      2 Template:KEY
+100.00%   19.509      1 -total
+ 25.73%    5.019      5 Template:PropertyData
+ 24.48%    4.775      1 Template:GuiCommand
+ 19.37%    3.779      5 Template:Variable
+ 12.04%    2.348      2 Template:Docnav
+  8.89%    1.735      1 Template:TitleProperty
+  7.62%    1.486      1 Template:Value
+  6.21%    1.211      6 Template:Incode
+  4.98%    0.971      2 Template:Caption
+  4.72%    0.921      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373299-0!canonical and timestamp 20260118194708 and revision id 1740798. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:373299-0!canonical and timestamp 20260118195033 and revision id 1740798. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
